trunk/Archive2/94/3867ee047f93c9/output
main.cpp: In constructor 'B::B()':
main.cpp:4:10: error: expected identifier before 'decltype'
     B(): decltype(a)() {}
          ^
main.cpp:4:10: error: expected '{' before 'decltype'
